Bug #1572 - Group / Member Profiles: Spacing between content areas

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1641,6 +1641,7 @@ input#group-request-send {
 }
 /**group profiles**/
 #group-action-wrapper{
+	margin-bottom: 20px;
     .link-btn{
         padding: 9px 12px;
     }
